Solved issue where boxes would overflow past container

--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
     /* width: fit-content; */
     min-width: 1080px;
     min-height: 1080px;
+    max-width: 1080px;
+    max-height: 1080px;
     /* height: fit-content; */
-    align-self: center;
-    justify-content: center;
-    flex-grow: inherit;
+
 }
 
 .board{
